# ray-tracing-v0

./: Point.hpp  Vector.hpp  build.sh  list3  list3.cpp  main  main.cpp
Basics/: img.ppm  list1  list1.cpp
Class/: Color.hpp  Ray.hpp  Sphere.hpp  Vector.hpp  beautiful.cpp  japan.cpp  japan.ppm  main  main.cpp  scene.cpp
Scenary/: Camera.hpp  Color.hpp  HitRecord.hpp  Hittable.hpp  HittableList.hpp  Interval.hpp  Makefile  Point.hpp  Ray.hpp  Sphere.hpp  Square.hpp  Triangle.hpp  Vector.hpp  commons.hpp  compile_commands.json  main  main.cpp  seam.ppm  simple_scene  simple_scene.cpp  utility.hpp  very_simple_scene  very_simple_scene.cpp  works.cu  writers.cu
Scenary/.cache/clangd/index/: Camera.hpp.AA1E8A02B433193E.idx  Color.hpp.D0F965DFBE4AACD9.idx  HitRecord.hpp.EED894E6BE396CD0.idx  Hittable.hpp.1A4F0F91E27988E0.idx  HittableList.hpp.C41E205035C50892.idx  Interval.hpp.3CD975A1C1C31D80.idx  Point.hpp.36CD013211C45804.idx  Ray.hpp.EF233B4705845721.idx  Sphere.hpp.C943ACC1A1416C5D.idx  Square.hpp.1CBC537E7B094B13.idx  Triangle.hpp.04AF395AF4F5BF55.idx  Vector.hpp.45A48F371D191B7A.idx  commons.hpp.FA90400032CF6A86.idx  main.cpp.F57564A3485CB86B.idx  stb_image_write.h.9823C4936C4F85B7.idx  (+1 more)
Shot/: CMakeLists.txt  README.md  main.cu  main1.cu  main2.cu
Shot/common/: common.hpp
Shot/include/: Camera.hpp  Color.hpp  Point.hpp  Ray.hpp  Scene.hpp  Sphere.hpp  SurfaceInteraction.hpp  Triangle.hpp  Vector.hpp
commons/: CMakeLists.txt  commons.cpp
include/: Interval.hpp  Point.hpp  Ray.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  commons.hpp
src/: main.cu
